# dynaconf-configuration-example

./: .gitignore  main.py  pyproject.toml  requirements.txt  secrets.toml  settings.toml
app/: config.py  crud.py  database.py  main.py  models.py  routes.py  schemas.py
