[project]
name = "dynaconf-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "fastapi>=0.121.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
